syntax = "proto3";

package model;

service Chat {
    rpc GetConversation(ChatPayload) returns (ChatConversation) {}
    rpc PostNewConversation(ChatPayload) returns (ChatPayload) {}
}


message ChatConversation {
    repeated ChatPayload conversation = 1;
}

message ChatPayload {
    string id = 1;
    string sender_id = 2;
    string receiver_id = 3;
    string message = 4;
    string status = 5;
    string date_created = 6;
}